# injector

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  config.toml.example  docker-compose.yml  justfile
.github/workflows/: ci.yml
crates/config/: Cargo.toml
crates/config/src/: lib.rs  settings.rs
crates/redpanda/: Cargo.toml
crates/rss/: Cargo.toml
crates/rss-feed/: Cargo.toml
crates/rss-feed/src/: error.rs  feed_item.rs  fetcher.rs  lib.rs  parser.rs  poller.rs  url.rs
crates/rss-feed/tests/: fetcher.rs
crates/rss-feed/tests/fixtures/: google_news.xml
grafana/provisioning/datasources/: prometheus.yml
knowledge/: coding-guidelines.md  decisions.md  kafka.md  metrics.md  redis.md  rust-idioms.md  tracing.md
prometheus/: prometheus.yml
proto/: news_item.proto
tempo/: tempo.yml
