[package]
name = "rss-feed"
version = "0.1.0"
edition = "2024"
description = "Google News RSS feed fetcher"

[dependencies]
backon = "1"
chrono = { version = "0.4", features = ["serde"] }
feed-rs = "1"
injector-config = { path = "../config" }
metrics = "0.24"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
thiserror = "2"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
urlencoding = "2"
